# Lab4

./: .cproject  .gitignore  .mxproject  .project  BLE_Server Debug.launch  BLE_Server.ioc  README.md
BlueNRG_MS/App/: app_bluenrg_ms.c  gatt_db.c  gatt_db.h  sensor.c  sensor.h
Core/Inc/: RTE_Components.h  b_l475e_iot01a1_conf.h
Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Debug/: BLE_Server.elf  BLE_Server.list  BLE_Server.map  makefile  objects.list  objects.mk  sources.mk
Debug/BlueNRG_MS/App/: app_bluenrg_ms.cyclo  app_bluenrg_ms.d  app_bluenrg_ms.su  subdir.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.su  stm32l4xx_it.d  subdir.mk
Debug/Drivers/BSP/B-L475E-IOT01A1/: stm32l475e_iot01_accelero.d  subdir.mk
Debug/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_tim.cyclo  stm32l4xx_hal_tim.d  stm32l4xx_hal_tim.su  (+1 more)
Drivers/BSP/B-L475E-IOT01A1/: b_l475e_iot01a1.c  b_l475e_iot01a1_bus.c
cmake/stm32cubemx/: CMakeLists.txt
docs/superpowers/plans/: 2026-04-16-ble-sensor-dashboard.md  2026-04-16-stm32-central.md
docs/superpowers/specs/: 2026-04-16-ble-sensor-dashboard-design.md
rpi_central/: ble_central.py  pyproject.toml
rpi_central/templates/: index.html
rpi_central/tests/: test_parsers.py  test_web.py
stm32_central/: BLE_Server.ioc  CMakeLists.txt
stm32_central/BlueNRG_MS/App/: app_bluenrg_ms.c  central.c  central.h
stm32_central/Core/Inc/: RTE_Components.h  b_l475e_iot01a1_conf.h
stm32_central/Core/Src/: main.c  stm32l4xx_it.c
stm32_central/cmake/stm32cubemx/: CMakeLists.txt
(+8 files in other folders)
